// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    id="<removed>"
    type="radio"
    value="value"
    aria-describedby="<removed>"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Inline 1`] = `
<style>
  .example-radio-group {
  display: flex;
  flex-wrap: wrap; 
  gap: var(--ds-size-6);
}
</style>
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Kontaktes på e-post?
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Bekreft om du ønsker å bli kontaktet per e-post.
  </p>
  <div>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="radio"
        value="ja"
        name="my-inline"
        id="<removed>"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        Ja
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="radio"
        value="nei"
        name="my-inline"
        id="<removed>"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        Nei
      </label>
    </ds-field>
  </div>
</fieldset>
`;

exports[`Outline 1`] = `
<ds-field
  data-variant="outline"
  data-clickdelegatefor="<removed>"
>
  <input
    id="<removed>"
    type="radio"
    value="value"
    aria-describedby="<removed>"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    id="<removed>"
    type="radio"
    value="value"
    aria-describedby="<removed>"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Radio In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      type="radio"
      checked
      aria-describedby="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="<removed>"
    >
      Description
    </div>
  </ds-field>
</div>
`;
